--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f5f5f5;
+            background: #f5f5f5;
         }
         .container {
             max-width: 1000px;
@@ -22,7 +22,7 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         h1 {
-            color: #2c3e50;
+            color: var(--primary-color, #2c3e50);
             text-align: center;
         }
         .subtitle {
@@ -38,19 +38,19 @@
         .name-button {
             position: absolute;
             background: rgba(255, 255, 255, 0.9);
-            border: 2px solid #3498db;
+            border: 2px solid var(--primary-color, #3498db);
             border-radius: 5px;
             padding: 8px 15px;
             cursor: pointer;
             font-weight: bold;
-            color: #2980b9;
+            color: var(--primary-color, #2980b9);
             font-size: 14px;
             transition: all 0.3s;
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
             min-width: 120px;
         }
         .name-button:hover {
-            background: #3498db;
+            background: var(--primary-color, #3498db);
             color: white;
             transform: scale(1.05);
         }
@@ -71,16 +71,20 @@
             top: 1393px;
             left: 514px;
         }
-        /* Make trash icon red and more visible */
-        #openTrashBtn {
-            background: #e53935 !important;
+        /* Make trash icon use theme color */
+        #openTrashBtn, #openTrashBtn1, #openTrashBtn2 {
+            background: var(--primary-color, #e53935) !important;
             color: #fff !important;
             border-radius: 50% !important;
             border: 4px solid #fff !important;
-            box-shadow: 0 4px 24px 4px #e5393555 !important;
-            width: 80px !important;
-            height: 80px !important;
-            font-size: 3rem !important;
+            box-shadow: 0 4px 24px 4px var(--primary-color, #e5393555) !important;
+            width: 40px !important;
+            height: 40px !important;
+            min-width: 40px !important;
+            min-height: 40px !important;
+            max-width: 40px !important;
+            max-height: 40px !important;
+            font-size: 1.5rem !important;
             display: flex !important;
             align-items: center !important;
             justify-content: center !important;
@@ -88,9 +92,10 @@
             cursor: pointer !important;
             transition: box-shadow 0.2s !important;
             opacity: 1 !important;
+            padding: 0 !important;
         }
-        #openTrashBtn:active {
-            box-shadow: 0 2px 8px #b23c3c99 !important;
+        #openTrashBtn:active, #openTrashBtn1:active, #openTrashBtn2:active {
+            box-shadow: 0 2px 8px var(--secondary-color, #b23c3c99) !important;
         }
         #bin-coords {
             background: #222c !important;
@@ -102,6 +107,63 @@
             user-select: none !important;
             opacity: 1 !important;
             z-index: 999 !important;
+        }
+        /* Side menu and job panel use theme */
+        #sideMenu {
+            background: #fff;
+            border-left: 4px solid var(--primary-color, #7c3aed);
+        }
+        #closeSideMenu {
+            color: var(--primary-color, #7c3aed);
+        }
+        #closeSideMenu:hover {
+            color: var(--secondary-color, #b23c3c);
+        }
+        #sideMenuTitle {
+            color: var(--primary-color, #7c3aed);
+        }
+        #clientListMenu .client-name {
+            background: linear-gradient(90deg, var(--gradient-start, #a084ee) 0%, var(--gradient-end, #8ec5fc) 100%);
+            color: #fff;
+        }
+        #clientListMenu .client-name:hover {
+            background: linear-gradient(90deg, var(--gradient-end, #8ec5fc) 0%, var(--gradient-start, #a084ee) 100%);
+        }
+        #clientJobsPanel h3 {
+            color: var(--secondary-color, #38bdf8);
+        }
+        #clientJobsPanel .a4-job-details {
+            border: 1.5px solid var(--primary-color, #a084ee);
+            background: rgba(232, 240, 255, 0.18);
+            box-shadow: 0 2px 8px var(--primary-color, #a084ee11);
+        }
+        #clientJobsPanel .a4-job-details:hover {
+            border-color: var(--secondary-color, #38bdf8);
+            box-shadow: 0 8px 25px var(--secondary-color, #38bdf822);
+        }
+        #clientJobsPanel th {
+            background: #f0f4fa;
+            color: var(--primary-color, #7c3aed);
+        }
+        .restore-btn {
+            background: var(--secondary-color, #38bdf8);
+            color: #fff;
+        }
+        .restore-btn:hover {
+            background: var(--primary-color, #1a5bb8);
+        }
+        .delete-forever-btn {
+            background: #b23c3c;
+            color: #fff;
+        }
+        .delete-forever-btn:hover {
+            background: #7a2323;
+        }
+        .close-modal-btn {
+            color: var(--primary-color, #a084ee);
+        }
+        .a4-modal-content h2 {
+            color: var(--primary-color, #4f2e7d);
         }
     </style>
 </head>
@@ -130,6 +192,7 @@
         <h2 id="sideMenuTitle" style="color:#7c3aed;text-align:left;margin-bottom:18px;font-size:1.3rem;"></h2>
         <div id="clientListMenu"></div>
         <div id="clientJobsPanel" style="margin-top:24px;"></div>
+        <button id="detailedViewBtn" style="margin-top:18px;background:#38bdf8;color:#fff;border:none;padding:10px 22px;border-radius:7px;font-size:1.08rem;cursor:pointer;display:block;width:100%;font-weight:600;">Detailed View</button>
     </div>
 
     <!-- Recycle Bin Dropdown Container (for both bin buttons) -->
@@ -207,10 +270,10 @@
       }
     };
 
-    document.getElementById('yolandie').onclick = () => window.showClientsForUser('Yolandie');
-    document.getElementById('francois').onclick = () => window.showClientsForUser('Francois');
-    document.getElementById('andre').onclick = () => window.showClientsForUser('Andre');
-    document.getElementById('neil').onclick = () => window.showClientsForUser('Neil');
+    document.getElementById('yolandie').onclick = () => { window.showClientsForUser('Yolandie'); setUserTheme('Yolandie'); };
+    document.getElementById('francois').onclick = () => { window.showClientsForUser('Francois'); setUserTheme('Francois'); };
+    document.getElementById('andre').onclick = () => { window.showClientsForUser('Andre'); setUserTheme('Andre'); };
+    document.getElementById('neil').onclick = () => { window.showClientsForUser('Neil'); setUserTheme('Neil'); };
     </script>
     <script type="module" src="plan-side-menu.js"></script>
     <script>
@@ -223,10 +286,10 @@
         imgContainer.appendChild(binBtn1);
         imgContainer.appendChild(binBtn2);
         binBtn1.style.position = 'absolute';
-        binBtn1.style.left = '659px';
+        binBtn1.style.left = '689px';
         binBtn1.style.top = '1198px';
         binBtn2.style.position = 'absolute';
-        binBtn2.style.left = '732px';
+        binBtn2.style.left = '762px';
         binBtn2.style.top = '817px';
         // Both bins open the recycle bin dropdown and render the list at the button
         binBtn1.onclick = function(event) { window.renderRecycleBin(event); };
@@ -244,6 +307,71 @@
     document.getElementById('movableUserBtn').onclick = function() {
       window.open('https://thenetwork1ng.github.io/job-card-sytem-/', '_blank');
     };
+
+    // Detailed View button logic
+    document.getElementById('detailedViewBtn').onclick = function() {
+      window.open('https://thenetwork1ng.github.io/view-jobs-/', '_blank');
+    };
+
+    // Set UI theme based on user
+    function setUserTheme(user) {
+      const root = document.documentElement;
+      switch(user) {
+        case 'Neil':
+          root.style.setProperty('--primary-color', '#0ea5e9');
+          root.style.setProperty('--secondary-color', '#0891b2');
+          root.style.setProperty('--accent-color', '#06b6d4');
+          root.style.setProperty('--gradient-start', '#0ea5e9');
+          root.style.setProperty('--gradient-end', '#0891b2');
+          root.style.setProperty('--primary-color-rgb', '14, 165, 233');
+          break;
+        case 'Yolandie':
+          root.style.setProperty('--primary-color', '#ec4899');
+          root.style.setProperty('--secondary-color', '#a855f7');
+          root.style.setProperty('--accent-color', '#c084fc');
+          root.style.setProperty('--gradient-start', '#ec4899');
+          root.style.setProperty('--gradient-end', '#a855f7');
+          root.style.setProperty('--primary-color-rgb', '236, 72, 153');
+          break;
+        case 'Francois':
+          root.style.setProperty('--primary-color', '#10b981');
+          root.style.setProperty('--secondary-color', '#059669');
+          root.style.setProperty('--accent-color', '#34d399');
+          root.style.setProperty('--gradient-start', '#10b981');
+          root.style.setProperty('--gradient-end', '#059669');
+          root.style.setProperty('--primary-color-rgb', '16, 185, 129');
+          break;
+        case 'Andre':
+          root.style.setProperty('--primary-color', '#f59e0b');
+          root.style.setProperty('--secondary-color', '#d97706');
+          root.style.setProperty('--accent-color', '#fbbf24');
+          root.style.setProperty('--gradient-start', '#f59e0b');
+          root.style.setProperty('--gradient-end', '#d97706');
+          root.style.setProperty('--primary-color-rgb', '245, 158, 11');
+          break;
+        default:
+          root.style.setProperty('--primary-color', '#7c3aed');
+          root.style.setProperty('--secondary-color', '#38bdf8');
+          root.style.setProperty('--accent-color', '#8b5cf6');
+          root.style.setProperty('--gradient-start', '#7c3aed');
+          root.style.setProperty('--gradient-end', '#38bdf8');
+          root.style.setProperty('--primary-color-rgb', '124, 58, 237');
+      }
+      // Update inline styles for all elements that use hardcoded theme colors
+      document.querySelectorAll('[style]').forEach(el => {
+        let style = el.getAttribute('style');
+        if (!style) return;
+        style = style
+          .replace(/#7c3aed/gi, 'var(--primary-color)')
+          .replace(/#a084ee/gi, 'var(--primary-color)')
+          .replace(/#38bdf8/gi, 'var(--secondary-color)')
+          .replace(/#4f2e7d/gi, 'var(--primary-color)')
+          .replace(/#8ec5fc/gi, 'var(--gradient-end)')
+          .replace(/#f0f4fa/gi, 'var(--gradient-start)')
+          .replace(/#b23c3c/gi, 'var(--secondary-color)');
+        el.setAttribute('style', style);
+      });
+    }
     </script>
 </body>
 </html>
